Added image resources for network and apikey.  some minor bug fixes

--- a/app/src/main/res/layout/activity_bookmarks.xml
+++ b/app/src/main/res/layout/activity_bookmarks.xml
@@ -24,14 +24,18 @@
         android:id="@+id/API_Key_bookmark"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="160dp"
+        android:fontFamily="monospace"
         android:gravity="center"
         android:padding="15dp"
         android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/bookmarks_rv" />
+        app:layout_constraintTop_toTopOf="@+id/bookmarks_rv"
+        tools:text="No Bookmarks" />
 
     <include
         android:id="@+id/bookmarks_rv"
@@ -60,4 +64,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <ImageView
+        android:id="@+id/bookmark_display_iv"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/API_Key_bookmark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/bookmarks_rv"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/ic_action_no_bookmarks" />
 </android.support.constraint.ConstraintLayout>
