--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,15 +24,32 @@
         android:id="@+id/API_Key"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="164dp"
+        android:fontFamily="monospace"
         android:gravity="center"
         android:padding="15dp"
         android:textColor="@android:color/white"
-        app:layout_constraintBottom_toTopOf="@+id/progressBar"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        tools:text="Set API Key" />
+
+    <ImageView
+        android:id="@+id/home_imageholder_iv"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/ic_action_network_check"
+        app:layout_constraintBottom_toTopOf="@+id/API_Key"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toTopOf="@+id/swipe_container"
+        app:layout_constraintVertical_bias="0.974" />
 
     <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swipe_container"
@@ -68,5 +85,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/swipe_container"
         app:layout_constraintTop_toTopOf="@+id/swipe_container"
-        app:layout_constraintVertical_bias="0.311" />
+        app:layout_constraintVertical_bias="0.367" />
 </android.support.constraint.ConstraintLayout>
