--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -395,5 +395,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/similar_tv" />
 
+    <ImageButton
+        android:id="@+id/share_ib"
+        android:layout_width="23dp"
+        android:layout_height="23dp"
+        android:background="@color/background"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/video_rv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/trailers_tv"
+        app:layout_constraintTop_toBottomOf="@+id/view_trailer"
+        app:layout_constraintVertical_bias="0.571"
+        card_view:srcCompat="@drawable/ic_action_share" />
+
 </android.support.constraint.ConstraintLayout>
 </ScrollView>
